mvp-setup and json basic
Added Shadcn and Tailwind, modular css, custom components (splitter and button), and shadcn components button, card, and navigation-menu

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,10 +3,25 @@
 
 @custom-variant dark (&:is(.dark *));
 
+:Root{
+  --background: #fafafa;
+  --foreground: #fff;
+  --primary-color: #88b7bd;
+
+  --text-primary: #000;
+  --text-secondary: #666;
+
+  --button-primary-hover: #383838;
+  --button-secondary-hover: #f2f2f2;
+  --button-secondary-border: #ebebeb;
+}
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: var(--font-geist-sans);
+  background-color: var(--background);
 }
 
 body {
@@ -23,6 +38,15 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+@layer base {
+  h1 { @apply text-4xl font-bold tracking-tight leading-tight; }
+  h2 { @apply text-3xl font-semibold leading-snug; }
+  h3 { @apply text-2xl font-semibold leading-snug; }
+  h4 { @apply text-xl font-medium; }
+  h5 { @apply text-lg font-medium; }
+  h6 { @apply text-base font-medium uppercase tracking-wide; }
 }
 
 @media (prefers-color-scheme: dark) {
@@ -71,8 +95,6 @@ a {
 
 :root {
   --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
   --popover: oklch(1 0 0);
@@ -102,6 +124,8 @@ a {
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --background: oklch(1 0 0);
+  --foreground: oklch(0.145 0 0);
 }
 
 .dark {
