--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,20 +1,8 @@
 .page {
-  --background: #fafafa;
-  --foreground: #fff;
-
-  --text-primary: #000;
-  --text-secondary: #666;
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-  --button-secondary-border: #ebebeb;
-
   display: flex;
   min-height: 100vh;
   align-items: center;
   justify-content: center;
-  font-family: var(--font-geist-sans);
-  background-color: var(--background);
 }
 
 .main {
@@ -27,6 +15,40 @@
   justify-content: space-between;
   background-color: var(--foreground);
   padding: 120px 60px;
+}
+
+.home{
+  width: 70vw;
+  padding: 1rem;
+}
+
+.dashboard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.navbar{
+  background-color: var(--primary-color);
+  padding: 1rem 0 1rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.splitterContainer{
+  width: 100%;
+  height: 2px;
+  display: flex;
+  justify-content: center;
+}
+
+.splitterContainer .splitter{
+  width: 25%;
+  height: 2px;
+  border-radius: 2px;
+  background-color: #cecece;
 }
 
 .intro {
@@ -81,16 +103,6 @@
   cursor: pointer;
   width: fit-content;
   font-weight: 500;
-}
-
-a.primary {
-  background: var(--text-primary);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--button-secondary-border);
 }
 
 /* Enable hover only on non-touch devices */
