--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -20,6 +20,33 @@
 .home{
   width: 70vw;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.information_container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  gap: 2rem;
+}
+
+.card_section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  gap: 1rem;
+}
+
+.table_section{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: 1rem;
 }
 
 .dashboard{
@@ -39,14 +66,14 @@
 
 .splitterContainer{
   width: 100%;
-  height: 2px;
+  height: 1px;
   display: flex;
   justify-content: center;
 }
 
 .splitterContainer .splitter{
   width: 25%;
-  height: 2px;
+  height: 1px;
   border-radius: 2px;
   background-color: #cecece;
 }
