Typo on globals.css :Root to :root

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 
 @custom-variant dark (&:is(.dark *));
 
-:Root{
+:root{
   --background: #fafafa;
   --foreground: #fff;
   --primary-color: #88b7bd;
