--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -34,9 +34,9 @@
 
 .card_section {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  width: 70%;
+  width: 100%;
   gap: 1rem;
 }
 
