--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,6 @@
 
 @custom-variant dark (&:is(.dark *));
 
-:root {
-  --background: #fafafa;
-  --foreground: #fff;
-  --primary-color: #88b7bd;
-
-  --text-primary: #000;
-  --text-secondary: #666;
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-  --button-secondary-border: #ebebeb;
-}
-
 html,
 body {
   max-width: 100vw;
@@ -107,8 +94,11 @@ a {
 
 :root {
   --radius: 0.625rem;
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
+  --card: #602770;
+  --card-foreground: #ffcd38;
+  --button: #602770;
+  --button-secondary: #895397;
+  --button-foreground: oklch(1 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(0.205 0 0);
@@ -137,7 +127,7 @@ a {
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --foreground: #602770;
 }
 
 .dark {
@@ -145,6 +135,8 @@ a {
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
+  --button: oklch(0.985 0 0);
+  --button-foreground: #602770;
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.922 0 0);
