--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -14,6 +14,7 @@
   align-items: flex-start;
   justify-content: space-between;
   background-color: var(--foreground);
+  color: var(--text-primary);
   padding: 120px 60px;
 }
 
@@ -38,6 +39,7 @@
   align-items: center;
   width: 100%;
   gap: 1rem;
+  color: var(--foreground)
 }
 
 .table_section {
@@ -56,7 +58,6 @@
 }
 
 .navbar {
-  background-color: var(--primary-color);
   padding: 1rem 0 1rem 0;
   width: 100%;
   display: flex;
