--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,5 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
-@import 'tailwindcss';
-@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -24,8 +22,6 @@ body {
   overflow-x: hidden;
   font-family: var(--font-geist-sans);
   background-color: var(--background);
-  font-family: var(--font-geist-sans);
-  background-color: var(--background);
 }
 
 body {
@@ -42,27 +38,6 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@layer base {
-  h1 {
-    @apply text-4xl font-bold tracking-tight leading-tight;
-  }
-  h2 {
-    @apply text-3xl font-semibold leading-snug;
-  }
-  h3 {
-    @apply text-2xl font-semibold leading-snug;
-  }
-  h4 {
-    @apply text-xl font-medium;
-  }
-  h5 {
-    @apply text-lg font-medium;
-  }
-  h6 {
-    @apply text-base font-medium uppercase tracking-wide;
-  }
 }
 
 @layer base {
@@ -106,6 +81,7 @@ a {
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
   --color-secondary: var(--secondary);
+  --color-secondary-light: var(--secondary-light);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
@@ -132,16 +108,16 @@ a {
 
 :root {
   --radius: 0.625rem;
-  --card: #602770;
-  --card-foreground: #ffcd38;
+  --card: oklch(0.985 0 0);
+  --card-foreground: oklch(0.205 0 0);
   --button: #602770;
   --button-secondary: #895397;
   --button-foreground: oklch(1 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
+  --primary: #602770;
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.97 0 0);
+  --secondary: #ffcd38;
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
@@ -165,12 +141,14 @@ a {
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
   --background: oklch(1 0 0);
-  --foreground: #602770;
+  --foreground: oklch(0.205 0 0);
 }
 
 .dark {
   --background: oklch(0.145 0 0);
   --foreground: oklch(0.985 0 0);
+  --primary-color:#602770;
+  --secondary-color:#ffcd38;
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
   --button: oklch(0.985 0 0);
