--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -39,7 +39,7 @@
   align-items: center;
   width: 100%;
   gap: 1rem;
-  color: var(--foreground)
+  color: var(--foreground);
 }
 
 .table_section {
