--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@ body {
   overflow-x: hidden;
   font-family: var(--font-geist-sans);
   background-color: var(--background);
+  scrollbar-gutter: stable;
 }
 
 body {
